# cicd

./: .gitattributes  Makefile  README.md  announce-ota.js  architecture.md  format-repo-commit.sh  git-dirty-status.rb  parse-targets.py  sign.sh  snapshot.c  targets.json
.github/workflows/: build-package-upload.yml  build-shell.yml  build-tailscale.yml  changelog.yml  release.yml  sync-sources.yml  test-tree.yml
changelog-generator/: Cargo.toml  markdown-snippet.handlebars
changelog-generator/src/: changelog.rs  cli.rs  main.rs  repo_log.rs  snapshot.rs  template.rs
