[package]
name = "changelog-generator"
description = "Generate changelog for superprojects managed by repo"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
arcstr = "1.2.0"
chrono = { version = "0.4.41", default-features = false }
color-eyre = "0.6.5"
nutype = { version = "0.6.1", features = ["regex"] }
palc = "0.0.1"
regex = "1.11.1"
snafu = { version = "0.8.6", features = ["rust_1_81"] }
xshell = "0.2.7"
